Adding main page, year counter

--- a/errors/404.html
+++ b/errors/404.html
@@ -4,8 +4,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>My Dashboard</title>
-	<link rel="stylesheet" href="css/style.css">
+	<title>Error</title>
+	<!-- <link rel="stylesheet" href="css/style.css"> -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;1,100&display=swap" rel="stylesheet">
 </head>
 <center>
 	<style>
@@ -16,7 +19,6 @@
   /* disable scrollbar */
   overflow: hidden;
 }
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,600&display=swap");
 
 .text {
   color: #fff;
@@ -32,7 +34,6 @@
   cursor: pointer;
 }
 /*Glitch effect*/
-@import url("https://fonts.googleapis.com/css?family=Montserrat:100");
 html,
 body,
 h1 {
@@ -330,8 +331,8 @@ skew to change the 'thickness' of the glitch.*/
 
 	</style>
 	<h1 class="text glitch" data-text="404" style="margin-top:10%;font-family: 'Montserrat', sans-serif; letter-spacing: 2px; font-size:18vh">404</h1>
-	<p class="text glitch" data-text="Page not found" style="letter-spacing: 2px;font-size:8vh">Page not found</p>
-	<p class="text glitch return" onclick="window.location.href = '/'" data-text="Return" style="margin-top:18%; letter-spacing: 2px;font-size:2vh">Return</p>
+	<p class="text glitch" data-text="Page not found" style="letter-spacing: 2px;font-family: 'Montserrat', sans-serif;font-size:8vh">Page not found</p>
+	<p class="text glitch return" onclick="window.location.href = '/'" data-text="Return" style="margin-top:18%; letter-spacing: 2px;font-family: 'Montserrat', sans-serif;font-size:2vh">Return</p>
 </center>
 </body>
 </html>
