Adding a rate limiter and editing files to work with server

--- a/public/errors/502.html
+++ b/public/errors/502.html
@@ -330,8 +330,8 @@ skew to change the 'thickness' of the glitch.*/
 }
 
 	</style>
-	<h1 class="text glitch" data-text="404" style="margin-top:10%;font-family: 'Montserrat', sans-serif; letter-spacing: 2px; font-size:18vh">404</h1>
-	<p class="text glitch" data-text="Page not found" style="letter-spacing: 2px;font-family: 'Montserrat', sans-serif;font-size:8vh">Page not found</p>
+	<h1 class="text glitch" data-text="502" style="margin-top:10%;font-family: 'Montserrat', sans-serif; letter-spacing: 2px; font-size:18vh">502</h1>
+	<p class="text glitch" data-text="Bad Gateway" style="letter-spacing: 2px;font-family: 'Montserrat', sans-serif;font-size:8vh">Bad Gateway</p>
 	<p class="text glitch return" onclick="window.location.href = '/'" data-text="Return" style="margin-top:18%; letter-spacing: 2px;font-family: 'Montserrat', sans-serif;font-size:2vh">Return</p>
 </center>
 </body>
