--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
           color: white;
         }
       </style>
+      <button id="showNextBD" class="nextBDButton">🎂</button>
       <p id="iniAge">I am <span id="isYears"></span> years old</p>
       <p id="iniUntil">
         I will be <span id="willBeAge"></span> in
@@ -32,9 +33,9 @@
           >seconds</span
         >
       </p>
-      <!-- <p id="nextBD">
+      <p id="nextBD">
         My next birthday is on: <span id="nextBDD"></span>
-        </p> -->
+        </p>
       <!-- <div id="pfp">
           <img id="pfpimg" src="img/pfp.png" alt="pfp" />
         </div> -->
